--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit==1.28.2
+streamlit
+ultralytics
 opencv-python==4.8.1.78
 numpy==1.24.3
 torch==2.0.1
 torchvision==0.15.2
-ultralytics==8.0.196
 filterpy==1.4.5
 Pillow==10.1.0
 psutil==5.9.5
