--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 streamlit
 ultralytics
-opencv-python==4.8.1.78
+opencv-python
+torch
+torchvision
+filterpy
+Pillow
+psutil
 numpy==1.24.3
-torch==2.0.1
-torchvision==0.15.2
-filterpy==1.4.5
-Pillow==10.1.0
-psutil==5.9.5
+
+
