--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-opencv-python-headless
+opencv-python-headless==4.11.0.86
 streamlit
 streamlit-webrtc
 ultralytics
@@ -8,6 +8,7 @@ filterpy
 Pillow
 psutil
 numpy==1.24.3
+
 
 
 
